--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 GITHUB_TOKEN=your_github_token
 OPENAI_API_KEY=your_openai_api_key
+OPENAI_ORG_ID=your_openai_org_id
+OPENAI_PROJECT_ID=your_openai_project_id
+NODE_ENV=development
+
