--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@octokit/rest": "^20.1.1"
+    "@octokit/rest": "^20.1.1",
+    "openai": "^4.51.0"
   }
 }
